--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
-  db:
-    image: postgres
+  solace-db:
+    image: postgres:17.5-alpine
     restart: always
     environment:
       POSTGRES_USER: postgres
@@ -8,6 +8,7 @@ services:
       POSTGRES_DB: solaceassignment
     volumes:
       - psql:/var/lib/postgresql/data
+      - ./db/init/:/docker-entrypoint-initdb.d/ # For initialization script
     ports:
       - 5432:5432
 volumes:
