--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "drizzle-orm": "^0.43.1",
     "next": "^15.3.2",
     "postgres": "^3.4.4",
+    "preline": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
