--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
+    "axios": "^1.9.0",
     "drizzle-orm": "^0.43.1",
     "next": "^15.3.2",
     "postgres": "^3.4.4",
